# rust-request

./: .travis.yml  Cargo.toml  README.md
doc/: search-index.js
doc/request/: fn.delete.html  fn.get.html  fn.head.html  fn.options.html  fn.post.html  fn.put.html  index.html  sidebar-items.js  stability.html  stability.json
doc/request/response/: index.html  struct.Response.html
doc/src/request/: lib.rs.html  response.rs.html
src/: lib.rs  main.rs  method.rs  response.rs  url.rs
